--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-05-30@11:40:18 TMZ" />
+<meta http-equiv="last-modified" content="2019-07-02@19:59:32 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : May 30, 2019
+                    Last Updated : July 02, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2NZ9mYcBgz">Wed Q/A Call_2019-05-29.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/8hn4AhBARv">Mon BBS Call_2019-05-27.mp3 - <span>Replay of 5/11/15</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/SOWYNrCtDx">Sun_Gridhealing_2019-05-26.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/nOoiXuCdpR">Wed Q/A Call_2019-05-22.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Wk3B7z5jC6">Mon BBS Call_2019-05-20.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/OgGOTxDboC">Sun_Gridhealing_2019-05-19.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/AuQL2A9dII">Mon BBS Call_2019-07-01.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bUYShkU6i8">Sun_Gridhealing_2019-06-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RnePUcu2oj">Wed Q/A Call_2019-06-26.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/dVoKOqrICH">Mon BBS Call_2019-06-24.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/4dNUOmCBbh">Sun_Gridhealing_2019-06-23.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/1zCmeTqaro">Wed Q/A Call_2019-06-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
                        
 
@@ -284,7 +284,6 @@ April <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/1519qSpNmD">Sun_Gridhealing_2019-04-28.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/H1vlqmAdmW">Mon BBS Call_2019-04-29.mp3 - <span>BBS Call</span></a></h2>
 </div>
-<a id="link1"></a>
 
 <div id="xout">
 May <br> <br>
@@ -301,6 +300,29 @@ May <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/SOWYNrCtDx">Sun_Gridhealing_2019-05-26.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/8hn4AhBARv">Mon BBS Call_2019-05-27.mp3 - <span>Replay of 5/11/15</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/2NZ9mYcBgz">Wed Q/A Call_2019-05-29.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+</div>
+
+<div id="xout">
+June <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yMdxgZJfVZ">Sun_Gridhealing_2019-06-02.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2I0sJqoj5f">Mon BBS Call_2019-06-03.mp3 - <span>Replay of 2012 call with Carla Rueckert</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/G3gL08IEmK">Wed Q/A Call_2019-06-05.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2FWAAwEHTy">Sun_Gridhealing_2019-06-09.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/CHQ2TkPR3a">Mon BBS Call_2019-06-10.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/NlChwQzr0b">Wed Q/A Call_2019-06-12.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/o3el31PSZH">Sun_Gridhealing_2019-06-16.mp3 - <span>Sunday Planetary Healing:Dreams</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/4f3rFQ7YIw">Mon BBS Call_2019-06-17.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/1zCmeTqaro">Wed Q/A Call_2019-06-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/4dNUOmCBbh">Sun_Gridhealing_2019-06-23.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/dVoKOqrICH">Mon BBS Call_2019-06-24.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RnePUcu2oj">Wed Q/A Call_2019-06-26.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bUYShkU6i8">Sun_Gridhealing_2019-06-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+</div>
+<a id="link1"></a>
+
+<div id="xout">
+July <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/AuQL2A9dII">Mon BBS Call_2019-07-01.mp3 - <span>BBS Call</span></a></h2>
 </div>
 <center>
         <br /><br />
