--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-07-02@19:59:32 TMZ" />
+<meta http-equiv="last-modified" content="2019-07-25@16:53:13 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : July 02, 2019
+                    Last Updated : July 25, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/AuQL2A9dII">Mon BBS Call_2019-07-01.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bUYShkU6i8">Sun_Gridhealing_2019-06-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RnePUcu2oj">Wed Q/A Call_2019-06-26.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/dVoKOqrICH">Mon BBS Call_2019-06-24.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/4dNUOmCBbh">Sun_Gridhealing_2019-06-23.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/1zCmeTqaro">Wed Q/A Call_2019-06-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Faj8K3wnum">Wed Q/A Call_2019-07-24.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/c0E4TEpoV3">Mon BBS Call_2019-07-22.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/HBAnRwZUud">Sun_Gridhealing_2019-07-21.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/x173cZTo0o">Wed Q/A Call_2019-07-17.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/d0ziEU5DTH">Mon BBS Call_2019-07-15.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/QcfmUR58wd">Sun_Gridhealing_2019-07-14.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 
@@ -323,6 +323,16 @@ June <br> <br>
 <div id="xout">
 July <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/AuQL2A9dII">Mon BBS Call_2019-07-01.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/0LjVt3fIDG">Wed Q/A Call_2019-07-03.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/6k5pflQzMq">Sun_Gridhealing_2019-07-07.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/1uESeGxUzv">Mon BBS Call_2019-07-08.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Arb12jty8d">Wed Q/A Call_2019-07-10.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/QcfmUR58wd">Sun_Gridhealing_2019-07-14.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/d0ziEU5DTH">Mon BBS Call_2019-07-15.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/x173cZTo0o">Wed Q/A Call_2019-07-17.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/HBAnRwZUud">Sun_Gridhealing_2019-07-21.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/c0E4TEpoV3">Mon BBS Call_2019-07-22.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Faj8K3wnum">Wed Q/A Call_2019-07-24.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
 <center>
         <br /><br />
