--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-07-25@16:53:13 TMZ" />
+<meta http-equiv="last-modified" content="2019-08-06@14:56:47 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : July 25, 2019
+                    Last Updated : August 06, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yy0FTgOG5X">Mon BBS Call_2019-08-05.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/hqhmsCQCFx">Sun_Gridhealing_2019-08-04.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/FB8lLI37q7">Wed Q/A Call_2019-07-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RM1vN26qX6">Mon BBS Call_2019-07-29.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bDrxI1mZJS">Sun_Gridhealing_2019-07-28.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/Faj8K3wnum">Wed Q/A Call_2019-07-24.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/c0E4TEpoV3">Mon BBS Call_2019-07-22.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/HBAnRwZUud">Sun_Gridhealing_2019-07-21.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/x173cZTo0o">Wed Q/A Call_2019-07-17.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/d0ziEU5DTH">Mon BBS Call_2019-07-15.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/QcfmUR58wd">Sun_Gridhealing_2019-07-14.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 
@@ -318,7 +318,6 @@ June <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/RnePUcu2oj">Wed Q/A Call_2019-06-26.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/bUYShkU6i8">Sun_Gridhealing_2019-06-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
-<a id="link1"></a>
 
 <div id="xout">
 July <br> <br>
@@ -333,6 +332,16 @@ July <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/HBAnRwZUud">Sun_Gridhealing_2019-07-21.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/c0E4TEpoV3">Mon BBS Call_2019-07-22.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/Faj8K3wnum">Wed Q/A Call_2019-07-24.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bDrxI1mZJS">Sun_Gridhealing_2019-07-28.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RM1vN26qX6">Mon BBS Call_2019-07-29.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/FB8lLI37q7">Wed Q/A Call_2019-07-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+</div>
+<a id="link1"></a>
+
+<div id="xout">
+August <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/hqhmsCQCFx">Sun_Gridhealing_2019-08-04.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yy0FTgOG5X">Mon BBS Call_2019-08-05.mp3 - <span>BBS Call</span></a></h2>
 </div>
 <center>
         <br /><br />
