--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-08-06@14:56:47 TMZ" />
+<meta http-equiv="last-modified" content="2019-08-20@19:03:30 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : August 06, 2019
+                    Last Updated : August 20, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yy0FTgOG5X">Mon BBS Call_2019-08-05.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/hqhmsCQCFx">Sun_Gridhealing_2019-08-04.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/FB8lLI37q7">Wed Q/A Call_2019-07-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/RM1vN26qX6">Mon BBS Call_2019-07-29.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bDrxI1mZJS">Sun_Gridhealing_2019-07-28.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Faj8K3wnum">Wed Q/A Call_2019-07-24.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Hq5MygED8d">Mon BBS Call_2019-08-19.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/UmgyEUt318">Sun_Gridhealing_2019-08-18.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/t7MeoI0cyS">Wed Q/A Call_2019-08-14.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/jxEA4LJ8sX">Mon BBS Call_2019-08-12.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/8NkijJrWjp">Sun_Gridhealing_2019-08-11.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/L9zMLShF7z">Wed Q/A Call_2019-08-07.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
                        
 
@@ -342,6 +342,12 @@ July <br> <br>
 August <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/hqhmsCQCFx">Sun_Gridhealing_2019-08-04.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/yy0FTgOG5X">Mon BBS Call_2019-08-05.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/L9zMLShF7z">Wed Q/A Call_2019-08-07.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/8NkijJrWjp">Sun_Gridhealing_2019-08-11.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/jxEA4LJ8sX">Mon BBS Call_2019-08-12.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/t7MeoI0cyS">Wed Q/A Call_2019-08-14.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/UmgyEUt318">Sun_Gridhealing_2019-08-18.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Hq5MygED8d">Mon BBS Call_2019-08-19.mp3 - <span>BBS Call</span></a></h2>
 </div>
 <center>
         <br /><br />
