--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-08-22@16:03:18 TMZ" />
+<meta http-equiv="last-modified" content="2019-09-03@19:21:13 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : August 22, 2019
+                    Last Updated : September 03, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/77OS7Wkh0i">Mon BBS Call_2019-09-02.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Mu6XnHXFHE">Sun_Gridhealing_2019-09-01.mp3 - <span>Sunday Planetary Healing:The frequency of love</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bzdgdr9Qsk">Wed Q/A Call_2019-08-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/aBgdNdYagH">Mon BBS Call_2019-08-26.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Pt5Rt1mAaA">Sun_Gridhealing_2019-08-25.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/oBENCnCXXx">Wed Q/A Call_2019-08-21.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Hq5MygED8d">Mon BBS Call_2019-08-19.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/UmgyEUt318">Sun_Gridhealing_2019-08-18.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/t7MeoI0cyS">Wed Q/A Call_2019-08-14.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/jxEA4LJ8sX">Mon BBS Call_2019-08-12.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/8NkijJrWjp">Sun_Gridhealing_2019-08-11.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 
@@ -336,7 +336,6 @@ July <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/RM1vN26qX6">Mon BBS Call_2019-07-29.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/FB8lLI37q7">Wed Q/A Call_2019-07-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
-<a id="link1"></a>
 
 <div id="xout">
 August <br> <br>
@@ -349,6 +348,16 @@ August <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/UmgyEUt318">Sun_Gridhealing_2019-08-18.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/Hq5MygED8d">Mon BBS Call_2019-08-19.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/oBENCnCXXx">Wed Q/A Call_2019-08-21.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Pt5Rt1mAaA">Sun_Gridhealing_2019-08-25.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/aBgdNdYagH">Mon BBS Call_2019-08-26.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/bzdgdr9Qsk">Wed Q/A Call_2019-08-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+</div>
+<a id="link1"></a>
+
+<div id="xout">
+September <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Mu6XnHXFHE">Sun_Gridhealing_2019-09-01.mp3 - <span>Sunday Planetary Healing:The frequency of love</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/77OS7Wkh0i">Mon BBS Call_2019-09-02.mp3 - <span>BBS Call</span></a></h2>
 </div>
 <center>
         <br /><br />
