--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-09-12@19:02:17 TMZ" />
+<meta http-equiv="last-modified" content="2019-10-03@18:52:09 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : September 12, 2019
+                    Last Updated : October 03, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/h3HVtQPXaY">Wed Q/A Call_2019-09-11.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/hKyjp7Dzco">Mon BBS Call_2019-09-09.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/6MWu94vpK5">Sun_Gridhealing_2019-09-08.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/GKKtfU9FWJ">Wed Q/A Call_2019-09-04.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/77OS7Wkh0i">Mon BBS Call_2019-09-02.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Mu6XnHXFHE">Sun_Gridhealing_2019-09-01.mp3 - <span>Sunday Planetary Healing:The frequency of love</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/TYZE42NdjU">Wed Q/A Call_2019-10-02.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Me66GYI5Fs">Mon BBS Call_2019-09-30.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/sA3xLw6q2z">Sun_Gridhealing_2019-09-29.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/7ZpE0RM9gT">Wed Q/A Call_2019-09-25.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/al5FQWj5L4">Mon BBS Call_2019-09-23.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/jyp46W9ZAU">Sun_Gridhealing_2019-09-22.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 
@@ -352,7 +352,6 @@ August <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/aBgdNdYagH">Mon BBS Call_2019-08-26.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/bzdgdr9Qsk">Wed Q/A Call_2019-08-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
-<a id="link1"></a>
 
 <div id="xout">
 September <br> <br>
@@ -362,6 +361,20 @@ September <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/6MWu94vpK5">Sun_Gridhealing_2019-09-08.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/hKyjp7Dzco">Mon BBS Call_2019-09-09.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/h3HVtQPXaY">Wed Q/A Call_2019-09-11.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/x4sRQ9Ut5o">Sun_Gridhealing_2019-09-15.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/A2pPeBRvv3">Mon BBS Call_2019-09-16.mp3 - <span>Did Terry and I Meet Another Disciple of Jesus?</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/cnYE3Cx3kW">Wed Q/A Call_2019-09-18.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/jyp46W9ZAU">Sun_Gridhealing_2019-09-22.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/al5FQWj5L4">Mon BBS Call_2019-09-23.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/7ZpE0RM9gT">Wed Q/A Call_2019-09-25.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/sA3xLw6q2z">Sun_Gridhealing_2019-09-29.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Me66GYI5Fs">Mon BBS Call_2019-09-30.mp3 - <span>BBS Call</span></a></h2>
+</div>
+<a id="link1"></a>
+
+<div id="xout">
+October <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/TYZE42NdjU">Wed Q/A Call_2019-10-02.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
 <center>
         <br /><br />
